specify poem form in description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>You AutoComplete Me</h1>
-      <p>the weird valentine generator</p>
+      <p>the weird valentine acrostic generator</p>
     </header>
 
     <h4>Enter your beloved's name:</h4>
