Tweak extension app to include insert function

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 
     <button class="make-poem hidden">MAKE POEM</button>
 
+    <div class="add hidden">
+      <p>Don't see the adjective you want?</p>
+      <p>Enter it here below:</p>
+      <input class="user-adjective" type="text" placeholder="NEW ADJECTIVE"></input>
+      <button class="submit-user-adjective" disabled>SUBMIT</button>
+    </div>
+
     <script rel="javascript" type="text/javascript" src="./scripts/scripts.js"></script>
   </body>
 </html>
